api/gate: regenerate gate API from spinnaker 1.9.4
